k8s/resources/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: app-system
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        # By using selector label and template label, 
        # the Deployment will know how to identify
        # the pods that he has to manage.
        component: worker
    spec:
      containers:
        - name: worker
          image: mroobert/multi-worker
