k8s/resources/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
  namespace: app-system
spec:
  type: ClusterIP
  selector:
     # By using selector section, the service will properly
     # select the client deployment => web pods
    component: web
  ports:
    # Exposes the service within the cluster on the port 3000.
    # Other pods within the cluster can communicate with
    # the service on the specified port.
    - port: 3000
      # This is the port on which the service will send requests to,
      # that the web pod will be listening on. The app inside the
      # container will need to be listening on this specified port.
      targetPort: 3000
